Added Project link in homepage

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="assignment/" target="_blank">Assignment</a></li>
+                <li><a href="project/" target="_blank">Project</a></li>
                 <li><a href="https://docs.google.com/document/d/1X2rXXre4sZ2gL6VsGNU8KTe06cjSMDswWK3F3jejWfE/edit"
                        target="_blank">Project Doc</a></li>
                 <li><a href="experiments" target="_blank">Experiment</a></li>
@@ -166,52 +167,6 @@
     <!--end: Container -->
 
 </div>
-
-<!--<div class="container-fluid bg-2 text-center">-->
-    <!--<h3>My Work</h3>-->
-    <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
-        <!--magna-->
-        <!--aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
-        <!--consequat.</p>-->
-    <!--&lt;!&ndash;<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>&ndash;&gt;-->
-    <!--<div class="row">-->
-        <!--<div class="col-sm-4">-->
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
-                <!--dolore magna</p>-->
-            <!--<img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
-                 <!--height="250">-->
-        <!--</div>-->
-        <!--<div class="col-sm-4">-->
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
-                <!--dolore magna</p>-->
-            <!--<img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
-                 <!--height="250">-->
-        <!--</div>-->
-        <!--<div class="col-sm-4">-->
-            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
-                <!--dolore magna</p>-->
-            <!--<img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
-                 <!--height="250">-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-
-<!--<footer class="container-fluid bg-4 text-center">-->
-<!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
-<!--</footer>-->
-
-
-<!-- FOOTER SECTION - Before closing </body> tag -->
-
-<!--<footer class="footer">-->
-    <!--<div class="container text-right">-->
-        <!--&lt;!&ndash;<p>Sanjiv Kumar 2016 | All Rights Reserved</p>&ndash;&gt;-->
-        <!--<a href="#" target="_blank"><i class="fa fa-github fa-lg"></i></a>-->
-        <!--<a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>-->
-        <!--<a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>-->
-    <!--</div>&lt;!&ndash;End container&ndash;&gt;-->
-<!--</footer>&lt;!&ndash;End footer 2&ndash;&gt;-->
-
 <footer class="footer">
     <div class="container">
         <div class="row">
