Fields related to forms are now visible in the field view

--- a/public/experiments/assignment/client/index.html
+++ b/public/experiments/assignment/client/index.html
@@ -52,5 +52,6 @@
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/forms/field.controller.js"></script>
     <script src="services/forms.service.client.js"></script>
+    <script src="services/field.service.client.js"></script>
 </body>
 </html>
