Implemented CRUD operation on fields. Added sortable functionality in fields

--- a/public/experiments/assignment/client/index.html
+++ b/public/experiments/assignment/client/index.html
@@ -11,6 +11,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
@@ -31,7 +32,7 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <!-- Minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>-->
@@ -53,5 +54,6 @@
     <script src="views/forms/field.controller.js"></script>
     <script src="services/forms.service.client.js"></script>
     <script src="services/field.service.client.js"></script>
+    <script src="directives/sortable.js"></script>
 </body>
 </html>
