updated link in home page for the assignment

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="assignment/" target="_blank">Assignment</a></li>
+                <li><a href="assignment/client/" target="_blank">Assignment</a></li>
                 <li><a href="project/" target="_blank">Project</a></li>
                 <li><a href="https://docs.google.com/document/d/1X2rXXre4sZ2gL6VsGNU8KTe06cjSMDswWK3F3jejWfE/edit"
                        target="_blank">Project Doc</a></li>
