Improved carousel on home page and added searchhome page (page after login page)

--- a/public/project-next/index.html
+++ b/public/project-next/index.html
@@ -11,8 +11,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!--<link href="https://rawgit.com/esleducation/ng-rating/master/css/ng-rating.css" rel="stylesheet"/>-->
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/half-slider.css">
     <link rel = "stylesheet" href = "css/style.css">
     <link rel = "stylesheet" href = "css/ng-rating.css">
 
@@ -50,6 +52,7 @@
 <script src="views/home/home.controller.js"></script>
 <script src="views/search/search.controller.js"></script>
 <script src="services/yelp.service.js"></script>
+<script src="services/foursquare.service.js"></script>
 <script src="views/search/searchdetails.controller.js"></script>
 <script src="views/users/login.controller.js"></script>
 <script src="services/user.service.client.js"></script>
@@ -59,5 +62,6 @@
 <script src="views/admin/admin.user.controller.js"></script>
 <script src="services/reviews.service.client.js"></script>
 <script src="js/ng-rating.js"></script>
+<script src="views/search/searchhome.controller.js"></script>
 </body>
 </html>
