Added vm in admin , home page

--- a/public/project-next/index.html
+++ b/public/project-next/index.html
@@ -50,7 +50,7 @@
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/home/home.controller.js"></script>
-<script src="views/search/search.controller.js"></script>
+<script src="views/search/searchresult.controller.js"></script>
 <script src="services/yelp.service.js"></script>
 <script src="services/foursquare.service.js"></script>
 <script src="views/search/searchdetails.controller.js"></script>
