updated forgotpassword view and added controller for forgot password

--- a/public/project-next/index.html
+++ b/public/project-next/index.html
@@ -63,5 +63,6 @@
 <script src="services/reviews.service.client.js"></script>
 <script src="js/ng-rating.js"></script>
 <script src="views/search/searchhome.controller.js"></script>
+<script src="views/users/forgotpassword.controller.js"></script>
 </body>
 </html>
