Added google Map API to project to show location of restaurant

--- a/public/experiments/angular/angular-api/index.html
+++ b/public/experiments/angular/angular-api/index.html
@@ -42,6 +42,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 <!-- Minified JavaScript -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
@@ -51,6 +52,8 @@
 <script src = "oauth.js"></script>
 <script src="app.js"></script>
 <script src="config.js"></script>
+<!--<script src="js/ng-maps.js"></script>-->
+<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 <script src="navigation/navigation.controller.js"></script>
 <script src="search/search.controller.js"></script>
 <script src="search/searchdetails.controller.js"></script>
@@ -58,4 +61,5 @@
 <script src="services/yelp.service.js"></script>
 <script src="services/foursquare.service.js"></script>
 <script src="https://rawgit.com/esleducation/ng-rating/master/js/ng-rating.js"></script>
+<script src="home/home.controller.js"></script>
 </html>
