Created server side reviews file, model and mock data and working on migrating reviews to server side

--- a/public/project-next/client/index.html
+++ b/public/project-next/client/index.html
@@ -35,7 +35,6 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
@@ -66,5 +65,9 @@
 <script src="js/ng-rating.js"></script>
 <script src="views/search/searchhome.controller.js"></script>
 <script src="views/users/forgotpassword.controller.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
+<!--<script async defer-->
+<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8&callback=&callback=initMap">-->
+<!--</script>-->
 </body>
 </html>
