--- a/public/project-next/client/index.html
+++ b/public/project-next/client/index.html
@@ -47,7 +47,7 @@
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="oauth.js"></script>
-<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
+<!--<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>-->
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/home/home.controller.js"></script>
@@ -67,7 +67,8 @@
 <script src="views/users/forgotpassword.controller.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <!--<script async defer-->
-<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8&callback=&callback=initMap">-->
+<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8&callback=initMap">-->
 <!--</script>-->
+<!--<script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>-->
 </body>
 </html>
