modified search result page with div instead of table

--- a/public/experiments/angular/angular-api/search/search.view.html
+++ b/public/experiments/angular/angular-api/search/search.view.html
@@ -15,25 +15,63 @@
 
 <h3>Search Results</h3>
 
-<div class="table-responsive">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Restaurant ID</th>
-                <th>Name</th>
-                <th>Ratings</th>
-                <th>Image</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="rest in data.businesses">
-                <td>{{rest.id}}</td>
-                <td>
-                    <a href="#/detail/{{rest.id}}">{{rest.name}}</a>
-                </td>
-                <td><img ng-src="{{rest.rating_img_url}}"/></td>
-                <td><img ng-src="{{rest.image_url}}"/></td>
-            </tr>
-        </tbody>
-    </table>
+<!--<div class="table-responsive">-->
+<!--<table class="table table-striped">-->
+<!--<thead>-->
+<!--<tr>-->
+<!--<th>Restaurant ID</th>-->
+<!--<th>Name</th>-->
+<!--<th>Ratings</th>-->
+<!--<th>Image</th>-->
+<!--</tr>-->
+<!--</thead>-->
+<!--<tbody>-->
+<!--<tr ng-repeat="rest in data.businesses">-->
+<!--<td>{{rest.id}}</td>-->
+<!--<td>-->
+<!--<a href="#/detail/{{rest.id}}">{{rest.name}}</a>-->
+<!--</td>-->
+<!--<td><img ng-src="{{rest.rating_img_url}}"/></td>-->
+<!--<td><img ng-src="{{rest.image_url}}"/></td>-->
+<!--</tr>-->
+<!--</tbody>-->
+<!--</table>-->
+<!--</div>-->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+            <p class="lead">Best Restaurant in Boston</p>
+        </div>
+        <div class="col-sm-4">
+            <p class="lead">Showing 1-10 of 100</p>
+        </div>
+    </div>
+    <div class="row" ng-repeat="rest in data.businesses" ng-if="$index >= 1">
+        <hr>
+        <div class="col-xs -2 col-sm-2">
+            <img ng-src="{{rest.image_url}}"/>
+        </div>
+        <div class="col-xs -5 col-sm-5">
+            <div class="row">{{$index}}. <a href="#/detail/{{rest.id}}">{{rest.name}}</a></div>
+            <div class="row"><p><img ng-src="{{rest.rating_img_url}}"/> {{rest.review_count}}Reviews</p></div>
+            <div class="row"><p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p></div>
+        </div>
+        <div class="col-xs-5 col-sm-5">
+            <p>{{rest.location.neighborhoods[0]}}</p>
+            <p>{{rest.location.display_address[0]}}</p>
+            <p>{{rest.location.display_address[2]}}</p>
+            <p>{{rest.display_phone}}</p>
+        </div>
+    </div>
+    <div class="row">
+        <hr>
+        <div class="col-sm-3">
+            <p>Page 1 of 10</p>
+        </div>
+        <div class="col-sm-9 text-right">
+            <p>1 2 3 4 5 6 Next ></p>
+        </div>
+        <hr>
+    </div>
 </div>
