Added autocomplete of places to location textbox

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -65,7 +65,8 @@
 <script src="js/ng-rating.js"></script>
 <script src="views/search/searchhome.controller.js"></script>
 <script src="views/users/forgotpassword.controller.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en
+             &key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <!--<script async defer-->
 <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8&callback=initMap">-->
 <!--</script>-->
