improved image rendering on searchhome page, worked on google maps, autocomplete of places

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/half-slider.css">
     <link rel = "stylesheet" href = "css/style.css">
     <link rel = "stylesheet" href = "css/ng-rating.css">
+    <link rel="stylesheet" href="./css/autocomplete.css">
 
 </head>
 
@@ -67,9 +68,6 @@
 <script src="views/users/forgotpassword.controller.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en
              &key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
-<!--<script async defer-->
-<!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8&callback=initMap">-->
-<!--</script>-->
-<!--<script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>-->
+<script src="./js/autocomplete.js"></script>
 </body>
 </html>
