Added detect current location functionality on home page search, created google service

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -69,5 +69,6 @@
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en
              &key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <script src="./js/autocomplete.js"></script>
+<script src="services/google.service.client.js"></script>
 </body>
 </html>
