Added userinfo view to see readonly info, this view will have readonly info about a profile

--- a/public/project-next/client/index.html
+++ b/public/project-next/client/index.html
@@ -70,5 +70,6 @@
              &key=AIzaSyD6yjHV4sdczAoxcNo7Hva0gmBHM6RJrD8"></script>
 <script src="./js/autocomplete.js"></script>
 <script src="services/google.service.client.js"></script>
+<script src="views/users/userInfo.controller.js"></script>
 </body>
 </html>
