--- a/public/project-next/client/index.html
+++ b/public/project-next/client/index.html
@@ -71,5 +71,8 @@
 <script src="./js/autocomplete.js"></script>
 <script src="services/google.service.client.js"></script>
 <script src="views/users/userInfo.controller.js"></script>
+<script src="views/users/followers.controller.js"></script>
+<script src="views/users/following.controller.js"></script>
+<script src="views/users/likes.controller.js"></script>
 </body>
 </html>
