Created restaurant schema, restaurant service to create restdetails in db if a user interacts with a restaurant

--- a/public/project-next/client/index.html
+++ b/public/project-next/client/index.html
@@ -74,5 +74,6 @@
 <script src="views/users/followers.controller.js"></script>
 <script src="views/users/following.controller.js"></script>
 <script src="views/users/likes.controller.js"></script>
+<script src="services/rest.service.client.js"></script>
 </body>
 </html>
