improved landing page contents, wrote validation on login, register and login pages

--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
 </div>
 
 <!--<div class="container-fluid bg-2 text-center">-->
-    <!--<h3>About Me</h3>-->
-    <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
-        <!--standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to-->
-        <!--make a type specimen book</p>-->
+<!--<h3>About Me</h3>-->
+<!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
+<!--standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to-->
+<!--make a type specimen book</p>-->
 <!--</div>-->
 
 <!-- start: 2nd Page - Services -->
@@ -88,9 +88,12 @@
 
                 <div class="span12">
 
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                    </p>
+                    <h3>
+                        Welcome! This website contains my work related to course CS5610 (Web development) at
+                        Northeastern
+                        University. The coursework is divided into three major categories as Assignment, Project and
+                        Experiments.
+                    </h3>
 
                 </div>
 
@@ -102,17 +105,17 @@
 
                 <!--<div class="span6">-->
 
-                    <!--<p>-->
-                        <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
-                    <!--</p>-->
+                <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
+                <!--</p>-->
 
                 <!--</div>-->
 
                 <!--<div class="span6">-->
 
-                    <!--<p>-->
-                        <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
-                    <!--</p>-->
+                <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
+                <!--</p>-->
 
                 <!--</div>-->
 
@@ -124,21 +127,25 @@
 
                 <div class="span4">
                     <div class="icons-box">
-                        <i class="fa fa-book fa-lg"></i>
+                        <a href="assignment/client/" target="_blank"><i class="fa fa-book fa-lg"></i></a>
                         <h3>Assignment</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                        </p>
+                            <p>
+                                I have developed a complete 'Form Maker' Application using MEAN stack. Please
+                                click above to view the application.
+                            </p>
                         <div class="clearfix"></div>
                     </div>
                 </div>
 
                 <div class="span4">
                     <div class="icons-box">
-                        <i class="fa fa-desktop fa-lg"></i>
+                        <i class="fa fa-cutlery fa-lg"></i>
                         <h3>Project</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            I have developed a project called 'EatnReview' using MEAN stack. This web application
+                            allows you search any food place, view the details of the restaurant, Like the place, submit
+                            reviews etc. My application also has feature to follow users and view their activity.
+                            Please click on the icon to visit application.
                         </p>
                         <div class="clearfix"></div>
                     </div>
@@ -146,10 +153,11 @@
 
                 <div class="span4">
                     <div class="icons-box">
-                        <i class="fa fa-filter fa-lg"></i>
-                        <h3>Experiment</h3>
+                        <i class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                        <h3>Screencast</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            A screencast of my project, explaining the various features as well as making people
+                            familiar with the project. Click above icon to watch it now!
                         </p>
                         <div class="clearfix"></div>
                     </div>
@@ -175,7 +183,7 @@
             </div>
 
             <div class="col-xs-6 text-right">
-                <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/mrsan22" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
             </div>
