updated project link on my home page

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
 
                 <div class="span4">
                     <div class="icons-box">
-                        <i class="fa fa-cutlery fa-lg"></i>
+                        <a href="project/client/" target="_blank"><i class="fa fa-cutlery fa-lg"></i></a>
                         <h3>Project</h3>
                         <p>
                             I have developed a project called 'EatnReview' using MEAN stack. This web application
