Added video link on my homepage

--- a/public/index.html
+++ b/public/index.html
@@ -129,10 +129,10 @@
                     <div class="icons-box">
                         <a href="assignment/client/" target="_blank"><i class="fa fa-book fa-lg"></i></a>
                         <h3>Assignment</h3>
-                            <p>
-                                I have developed a complete 'Form Maker' Application using MEAN stack. Please
-                                click above to view the application.
-                            </p>
+                        <p>
+                            I have developed a complete 'Form Maker' Application using MEAN stack. Please
+                            click above to view the application.
+                        </p>
                         <div class="clearfix"></div>
                     </div>
                 </div>
@@ -153,7 +153,8 @@
 
                 <div class="span4">
                     <div class="icons-box">
-                        <i class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                        <a href="https://youtu.be/oWRttVCECUo" target="_blank"><i class="fa fa-video-camera fa-lg"
+                                                                                  aria-hidden="true"></i></a>
                         <h3>Screencast</h3>
                         <p>
                             A screencast of my project, explaining the various features as well as making people
@@ -183,7 +184,7 @@
             </div>
 
             <div class="col-xs-6 text-right">
-                <a href="https://github.com/mrsan22" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/mrsan22/WebDevSpring2016" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
             </div>
